--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Consuntivazione Ferie e Assenze</title>
+<link rel="icon" href="favicon.ico">
     <!-- Inclusione della libreria SheetJS per la gestione dei file Excel -->
     <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
     <style>
